@@ -1,6 +1,9 @@
 Internal, very small, undocumented, or invisible changes
 ********************************************************
 
+Camlp5 Version 5.08:
+---------------------
+
 Camlp5 Version 5.07:
 ---------------------
 
